Welcome index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="laba">
                 <h2 class="laba__header">Лабораторная работа №2</h2>
-                TBD
+                В рамках данной лабораторной работы необходимо выполнить задачи в соответствии со своей ролью.Моя роль -аналитик .  Я сделал как тестирование сайта на отображение
             </div>
             <div class="laba">
                 <h2 class="laba__header">Лабораторная работа №2</h2>
