Welcome index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body style="background-color: blue-violet ;">
+    <body style="background-color: blue ;">
         <main>
             <div class="profile">
                 <h1 class="profile__fullname">
